--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,8 @@
    
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="/src/styles/output.css" rel="stylesheet">
+    <link href="/src/styles/output.css" rel="stylesheet" type="text/css" />
+    <script src="https://kit.fontawesome.com/592788d6c5.js" crossorigin="anonymous"></script>
     <title>ImitateApp</title>
   </head>
   <body>
